--- a/Web_App/templates/Web_App/index.html
+++ b/Web_App/templates/Web_App/index.html
@@ -13,7 +13,7 @@
     <!--UI CSS-->
     <link rel="stylesheet" href="{% static 'CSS/styles.css' %}">
   </head>
-<body style="background-color: rgb(13, 9, 53);">
+<body style="background-color: rgb(6, 4, 29);">
       
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
           <div class="container-fluid">
@@ -24,17 +24,18 @@
             <div class="collapse navbar-collapse" id="navbarNav" style="text-align: right;">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="sports">Sports</a>
                 </li>
                 <li class="nav-item">
+                  <a class="nav-link" href="organise">Organize</a>
+              </li>
+                <li class="nav-item">
                   <a class="nav-link" href="store">Store</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="organise">Organize</a>
-                </li>
+                
               </ul>
             </div>
           </div>
@@ -53,14 +54,14 @@
             </h1>
           </div>
           <div class="col-sm-6">
-            <h3 style="margin-left: 3.5cm;">News Feed</h3>
+            <br> <h3 style="margin-left: 4.7cm;">News Feed</h3>
           
               {% for i in articles %}
 
-              <div class="card rounded shadow-lg m-2" style="width: 25rem; height: auto;">
+              <div class="card rounded shadow-lg m-2" style="width: 30rem; height: auto;">
                   <img src="{{ i.urlToImage }}" style="height: auto;" class="card-img-top" alt="...">
                   <div class="card-body">
-                  <p class="card-text" style="color: black; text-align: left;">{{ i.author }}</p>
+                  <p class="card-text" style="color: black; text-align: center;">{{ i.author }}</p>
                   <h5 class="card-title" style="color: black; text-align: left;">{{ i.title }}</h5>
                   <p class="card-title" style="color: black; ">{{ i.source.name }}</p>
                   <p class="card-text" style="color: black; text-align: left; " >{{ i.description }}</p>
