--- a/Web_App/templates/Web_App/store.html
+++ b/Web_App/templates/Web_App/store.html
@@ -25,17 +25,18 @@
                 <div class="collapse navbar-collapse" id="navbarNav" style="text-align: right;">
                     <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="sports">Sports</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="store">Store</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="organise">Organize</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="store">Store</a>
+                    </li>
+                    
                     </ul>
                 </div>
                 </div>
