--- a/Web_App/templates/Web_App/event.html
+++ b/Web_App/templates/Web_App/event.html
@@ -23,7 +23,7 @@
           <div class="collapse navbar-collapse" id="navbarNav" style="text-align: right;">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="sports">Sports</a>
@@ -46,55 +46,22 @@
         <h3 style="color: rgb(255, 255, 255); text-align: left;">Upcoming Football Events</h3><br>
         <div class="row row-cols-2 row-cols-lg-4 g-2 g-lg-3" id="gut">
           <div class="col">
-            <div class="p-3 border-0" style="background-color: white"><!--<img src="{% static 'images/football_s.jpg' %}" alt=""> Football</div>-->
+            <div class="p-1 border-0" style="background-color: white"><!--<img src="{% static 'images/football_s.jpg' %}" alt=""> Football</div>-->
             <a href="{% url 'eventform' %}">
-                <img src="{% static 'images/event_sil_s.jpg' %}" alt="..." class="img-thumbnail h-100 w-100" >
+                <img src="{% static 'images/event.jpeg' %}" alt="..." class="img-thumbnail" style="height: 9cm; width: 8cm; ">
               </a>
-                Football Tournament
+                <strong>Football Tournament</strong> 
             </div>
             </div>
-              <div class="col">
-                  <div class="p-3 border-0" style="background-color: white"><!--<img src="{% static 'images/football_s.jpg' %}" alt=""> Football</div>-->
-                      <img src="{% static 'images/event_sil_s.jpg' %}" alt="..." class="img-thumbnail h-100 w-100" >
-                      Football Tournament
-                  </div>
-              </div>
-              <div class="col">
-                  <div class="p-3 border bg-light"><!--<img src="{% static 'images/football_s.jpg' %}" alt=""> Football</div>-->
-                      <img src="{% static 'images/event_sil_s.jpg' %}" alt="..." class="img-thumbnail">
-                      Football Tournament
-                  </div>
-              </div>
-              <div class="col">
-                  <div class="p-3 border bg-light"><!--<img src="{% static 'images/football_s.jpg' %}" alt=""> Football</div>-->
-                      <img src="{% static 'images/event_sil_s.jpg' %}" alt="..." class="img-thumbnail">
-                      Football Tournament
-                  </div>
-              </div>
-              <div class="col">
-                  <div class="p-3 border bg-light"><!--<img src="{% static 'images/football_s.jpg' %}" alt=""> Football</div>-->
-                      <img src="{% static 'images/event_sil_s.jpg' %}" alt="..." class="img-thumbnail">
-                      Football Tournament
-                  </div>
-              </div>
-              <div class="col">
-                  <div class="p-3 border bg-light"><!--<img src="{% static 'images/football_s.jpg' %}" alt=""> Football</div>-->
-                      <img src="{% static 'images/event_sil_s.jpg' %}" alt="..." class="img-thumbnail">
-                      Football Tournament
-                  </div>
-              </div>
-              <div class="col">
-                  <div class="p-3 border bg-light"><!--<img src="{% static 'images/football_s.jpg' %}" alt=""> Football</div>-->
-                      <img src="{% static 'images/event_sil_s.jpg' %}" alt="..." class="img-thumbnail">
-                      Football Tournament
-                  </div>
-              </div>
-              <div class="col">
-                  <div class="p-3 border bg-light"><!--<img src="{% static 'images/football_s.jpg' %}" alt=""> Football</div>-->
-                      <img src="{% static 'images/event_sil_s.jpg' %}" alt="..." class="img-thumbnail">
-                      Football Tournament
-                  </div>
-              </div>
+            {% for event in events %}
+            <div class="col">
+                <div class="p-1 border-0" style="background-color: white"><!--<img src="{% static 'images/football_s.jpg' %}" alt=""> Football</div>-->
+                  <img class="img-thumbnail" style="height: 8cm; width: 8cm; " src="{{event.imageURL}}">
+                  <hr>
+                  <h6><strong>{{event.name }}</strong></h6>
+                </div>
+            </div>
+            {% endfor %}
           </div>
           
       </div>
