--- a/Web_App/templates/Web_App/index.html
+++ b/Web_App/templates/Web_App/index.html
@@ -19,12 +19,13 @@
           <div class="container-fluid">
             <a class="navbar-brand" href="#" style="font-size: 30px;">SportsNet</a> &nbsp; &nbsp; &nbsp; &nbsp;
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav" style="text-align: right;">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
+                  <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="sports">Sports</a>
@@ -46,7 +47,7 @@
       <div class="container" >
         <div class="row">
           <div class="col-sm-6">
-            <br><br><br><br><h1>LOGO</h1><br><br><br>
+            <br><br><br><br><br><br>            
             <h1>
               <a href="" class="typewrite" data-period="2000" data-type='[ "Dream it.", "Believe it.", "Achieve it.", "Dream it. Believe it. Achieve it." ]'>
                 <span class="wrap"></span>
