--- a/Web_App/templates/Web_App/organise.html
+++ b/Web_App/templates/Web_App/organise.html
@@ -21,7 +21,7 @@
           <div class="collapse navbar-collapse" id="navbarNav" style="text-align: right;">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="sports">Sports</a>
@@ -39,9 +39,12 @@
       </nav>
 
       <div class="container">
-        <a href="organizer">
-        <h2>Create a new event</h2>
-      </a>
+        <button>
+          <a href="organizer">
+            <h2>Create a new event</h2>
+          </a>
+        </button>
+        
       </div>
 
       <script src="https://unpkg.com/@popperjs/core@2/dist/umd/popper.js"></script>
