--- a/Web_App/templates/Web_App/store.html
+++ b/Web_App/templates/Web_App/store.html
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav" style="text-align: right;">
                     <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="sports">Sports</a>
@@ -54,8 +54,8 @@
             <div class="row">
                 {% for product in products %}
                 <div class="col-lg-4">
-                    <img class="thumbnail" src="{{product.imageURL}}">
-                    <div class="box-element product">
+                    <img class="thumbnail" style="height: 8cm; width: 8cm; " src="{{product.imageURL}}">
+                    <div class="box-element product" style="height: 2cm; width: 8cm; ">
                         <h6><strong>{{product.name }}</strong></h6>
                         <hr>
                         </div>
