--- a/static/CSS/organizer.css
+++ b/static/CSS/organizer.css
@@ -8,13 +8,15 @@
 }
 
 body{
-  background: url("/static/images/organizer.jpeg");
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(5,5,42,1) 35%, rgba(0,212,255,1) 100%);  
+  
 }
 
 .wrapper{
   max-width: 500px;
   width: 100%;
-  background: #fff;
+  background: rgb(113, 151, 223);
   margin: 20px auto;
   box-shadow: 1px 1px 2px rgba(0,0,0,0.125);
   padding: 30px;
@@ -24,7 +26,7 @@ body{
   font-size: 24px;
   font-weight: 700;
   margin-bottom: 25px;
-  color: #fec107;
+  color: #000000;
   text-transform: uppercase;
   text-align: center;
 }
@@ -41,7 +43,7 @@ body{
 
 .wrapper .form .inputfield label{
    width: 200px;
-   color: #757575;
+   color: #080808;
    margin-right: 10px;
   font-size: 14px;
 }
@@ -97,7 +99,7 @@ body{
 .wrapper .form .inputfield .input:focus,
 .wrapper .form .inputfield .textarea:focus,
 .wrapper .form .inputfield .custom_select select:focus{
-  border: 1px solid #fec107;
+  border: 1px solid #033c57;
 }
 
 .wrapper .form .inputfield p{
@@ -149,7 +151,7 @@ body{
    padding: 8px 10px;
   font-size: 15px; 
   border: 0px;
-  background:  #fec107;
+  background:  #070558;
   color: #fff;
   cursor: pointer;
   border-radius: 3px;
@@ -157,7 +159,7 @@ body{
 }
 
 .wrapper .form .inputfield .btn:hover{
-  background: #ffd658;
+  background: #0c95be;
 }
 
 .wrapper .form .inputfield:last-child{
