--- a/static/CSS/storef.css
+++ b/static/CSS/storef.css
@@ -1,88 +1,88 @@
 
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        
-        body{
-            font-family: "Open Sans";
-            color: #fff;
-        }
-        section{
-            background: url("/static/images/bg2.jpg");
-            height: 120vh;
-            width: 100%;
-            background-size: cover;
-            background-position: center center;
-            
-        }
-        .form-container{
-            position: absolute;
-            top: 40%;
-            left: 50%;
-            transform: translate(-50%,-40%);
-            width: 380px;
-            padding: 80px 35px;
-            padding-bottom: -10px;
-            border-radius: 10px;
-            box-shadow:7px 7px 60px #000;
-        }
-        h1{
-            color: #ffffff;
-            font-size: 2em;
-            text-transform: uppercase;
-            text-align: center;
-            margin-bottom: 5rem;
-        }
-        .control input{
-            padding: 5px;
-            font-size: 16px;
-            display: block;
-            width: 100%;
-            color:#000;
-            background: #ddd;
-            outline: none;
-            border: none;
-            margin: 1em 0;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
-        }    
-        
-        .text{
-
-            padding: 5px;
-            font-size: 16px;
-            display: block;
-            width: 100%;
-            color:#000;
-            background: #ddd;
-            outline: none;
-            border: none;
-            margin: 1em 0;
-
-
-        }
-
-
-        .control .btn{
-            color: #fff;
-            text-transform: uppercase;
-            background: crimson;
-            opacity: .7;
-            transition:opacity .3s ease;
-        }
-        .btn:focus{
-            opacity: 1;
-        }
-        p{
-            text-align: center;
-        }
-        a{
-            text-decoration: none;
-            color: #fff;
-            opacity: .7;
-        }
-        a:hover{
-            opacity: 1;
-        }
+body{
+    font-family: "Open Sans";
+    color: #fff;
+}
+section{
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(74,72,98,1) 35%, rgba(173,162,228,1) 100%);    
+    height: 115vh;
+    width: 100%;
+    background-size: cover;
+    background-position: center center;
     
+}
+.form-container{
+    margin-top: 0cm;
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%,-40%);
+    height: 100vh;
+    width: 480px;
+    padding: 80px 35px;
+    border-radius: 10px;
+    box-shadow:7px 7px 60px #000;
+}
+h1{
+    color: #ffffff;
+    font-size: 2em;
+    text-transform: uppercase;
+    text-align: center;
+}
+.control input{
+    padding: 5px;
+    font-size: 16px;
+    display: block;
+    width: 100%;
+    color:#000;
+    background: #ddd;
+    outline: none;
+    border: none;
+    margin: 1em 0;
+
+}    
+
+.text{
+
+    padding: 5px;
+    font-size: 16px;
+    display: block;
+    width: 100%;
+    color:#000;
+    background: #ddd;
+    outline: none;
+    border: none;
+    margin: 1em 0;
+
+
+}
+
+
+.control .btn{
+    color: #fff;
+    text-transform: uppercase;
+    background: crimson;
+    opacity: .7;
+    transition:opacity .3s ease;
+}
+.btn:focus{
+    opacity: 1;
+}
+p{
+    text-align: center;
+}
+a{
+    text-decoration: none;
+    color: #fff;
+    opacity: .7;
+}
+a:hover{
+    opacity: 1;
+}
