--- a/static/CSS/styles.css
+++ b/static/CSS/styles.css
@@ -26,6 +26,12 @@ body {
   font-family: "Montserrat", sans-serif;
   /* box-shadow: inset 0 0 2rem rgba(0, 0, 0, .5); */
 }
+
+#cart-icon{
+	width:25px;
+	display: inline-block;
+	margin-left: 15px;
+}
 /* Scrollbar desgin */
 /* width */
 ::-webkit-scrollbar {
